# dezero

./: .envrc_  .gcloudignore  Makefile  environment.yml  pyproject.toml  pyproject.toml.old  sample.dot
dezero/: __init__.py  core.py  core_simple.py  cuda.py  dataloaders.py  datasets.py  functions.py  functions_conv.py  layers.py  models.py  optimizers.py  utils.py
dezero/cli/: make_next.py
dezero/steps/: __init__.py  my_mlp.npz  step01.py  step02.py  step03.py  step04.py  step06.py  step07.py  step08.py  step09.py  step10.py  step11.py  step13.py  step16.py  step17.py  step18.py  step19.py  step21.py  step22.py  step23.py  step24.py  step26.py  step27.py  step28.py  step29.py  step33.py  step34.py  step35.py  step36.py  step37.py  step38.py  step39.py  step40.py  step41.py  step42.py  step43.py  step44.py  step45.py  step46.py  step47.py  (+12 more)
dezero/utils/: make_next.py
notebooks/: 0.1_plot_rosenblock.ipynb  0.2_vgg.ipynb
